--- a/networkStack.yml
+++ b/networkStack.yml
@@ -427,7 +427,7 @@ Resources:
 # NAT gateway
   NatGateway1EIP:
     Type: AWS::EC2::EIP
-    # DependsOn: InternetGatewayAttachment
+    DependsOn: InternetGatewayAttachment
     Properties:
       Domain: vpc
       Tags:
@@ -436,7 +436,7 @@ Resources:
 
   NatGateway2EIP:
     Type: AWS::EC2::EIP
-    # DependsOn: InternetGatewayAttachment
+    DependsOn: InternetGatewayAttachment
     Properties:
       Domain: vpc
       Tags:
@@ -445,7 +445,7 @@ Resources:
 
   NatGateway3EIP:
     Type: AWS::EC2::EIP
-    # DependsOn: InternetGatewayAttachment
+    DependsOn: InternetGatewayAttachment
     Properties:
       Domain: vpc
       Tags:
@@ -480,7 +480,7 @@ Resources:
           Value: !Sub ${EnvironmentName}-ngw-3
 
   RouteNATGateway1:
-    DependsOn: NATGateway1
+    # DependsOn: NATGateway1
     Type: AWS::EC2::Route
     Properties:
       RouteTableId: !Ref PrivateRouteTable1
@@ -488,7 +488,7 @@ Resources:
       NatGatewayId: !Ref NATGateway1
 
   RouteNATGateway2:
-    DependsOn: NATGateway2
+    # DependsOn: NATGateway2
     Type: AWS::EC2::Route
     Properties:
       RouteTableId: !Ref PrivateRouteTable2
@@ -496,7 +496,7 @@ Resources:
       NatGatewayId: !Ref NATGateway2
 
   RouteNATGateway3:
-    DependsOn: NATGateway3
+    # DependsOn: NATGateway3
     Type: AWS::EC2::Route
     Properties:
       RouteTableId: !Ref PrivateRouteTable3
