--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,10 +21,10 @@ phases:
       - cfn-lint serverStack.yml
       - cfn-lint dnsStack.yml
       - echo CloudFormation Template Build started on `date`**
-      - aws cloudformation package --template-file permissionStack.yml --s3-bucket leopard-nasproject --output-template-file outPutTemplate.yml
-      - aws cloudformation package --template-file networkStack.yml --s3-bucket leopard-nasproject --output-template-file outPutTemplate1.yml
-      - aws cloudformation package --template-file serverStack.yml --s3-bucket leopard-nasproject --output-template-file outPutTemplate2.yml
-      - aws cloudformation package --template-file dnsStack.yml --s3-bucket leopard-nasproject --output-template-file outPutTemplate3.yml
+      - aws cloudformation package --template-file permissionStack.yml --s3-bucket sunnystore.com --output-template-file outPutTemplate.yml
+      - aws cloudformation package --template-file networkStack.yml --s3-bucket sunnystore.com --output-template-file outPutTemplate1.yml
+      - aws cloudformation package --template-file serverStack.yml --s3-bucket sunnystore.com --output-template-file outPutTemplate2.yml
+      - aws cloudformation package --template-file dnsStack.yml --s3-bucket sunnystore.com --output-template-file outPutTemplate3.yml
   post_build:
     commands:
       - echo Build completed on `date`
