--- a/serverStack.yml
+++ b/serverStack.yml
@@ -15,7 +15,7 @@ Parameters:
     MaxLength: '16'
     AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
     ConstraintDescription: must begin with a letter and contain only alphanumeric characters.
-    # Default: nasadmin
+    Default: nasadmin
 
   
   NasLeopardParameter:
