--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,7 @@ phases:
       - cfn-lint networkStack.yml
       - cfn-lint serverStack.yml
       - cfn-lint dnsStack.yml
+      - echo cfn template validation complete at `time`
       - echo CloudFormation Template Build started on `date`**
       - aws cloudformation package --template-file permissionStack.yml --s3-bucket sunnystore.com --output-template-file outPutTemplate.yml
       - aws cloudformation package --template-file networkStack.yml --s3-bucket sunnystore.com --output-template-file outPutTemplate1.yml
